force-app/main/default/objects/NS_EmailToQueue__mdt/NS_EmailToQueue__mdt.object-meta.xml
<CustomObject>
    <label>NS_EmailToQueue</label>
    <pluralLabel>NS_EmailToQueue</pluralLabel>
</CustomObject>