force-app/main/default/objects/NS_EmailToQueue__mdt/fields/Forwarding_Address__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Address__c</fullName>
    <label>Forwarding_Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>