force-app/main/default/objects/NS_EmailToQueue__mdt/fields/Routing_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Routing_Email_1__c</fullName>
    <label>Routing Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>