force-app/main/default/objects/NS_EmailToQueue__mdt/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Queue_Id__c</columns>
    <columns>Routing_Email_1__c</columns>
    <columns>Forwarding_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>