force-app/main/default/objects/NS_EmailToQueue__mdt/listViews/NS_EmailToQueue.listView-meta.xml
<ListView>
    <fullName>NS_EmailToQueue</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Queue_Id__c</columns>
    <columns>Routing_Email_1__c</columns>
    <columns>Forwarding_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>NS_EmailToQueue</label>
</ListView>